public/css/styles.css
body {
    background-color: #121212;
}

.text-card {
    color: white !important;
}

.card {
    border: none !important; 
}

.overlay {
    position: absolute;
    background: rgba(0, 0, 0, 0);
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0;
    height: 100%;
    width: 100%;
    text-align: center;
}

.overlay:hover {
    background: rgba(0, 0, 0, 0.7);
}

.card-home {
    background-color: #121212;
}

.extend-index {
    min-height: calc(100vh - 1px);
}

.plainItem, .plainitem:hover {
    color: white !important;
}

.adjusting-align {
    justify-content: flex-end !important;
}

@media (max-width: 576px) {
    .adjusting-align {
        justify-content: center !important;
    }
}

.itemName {
    color: rgba(0, 0, 0, 0);
    text-align: center;
    font-size: 30px;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: +1;
}

.itemName:hover {
    color: rgba(255, 255, 255, 0.999);
}

.index {
    text-align: center;
}

.nav-link, .navbar-brand {
    color: white !important;
}

.nav-link:hover, .navbar-brand:hover {
    color: #6f42c1 !important;
}

.cardPurple {
    border: 2px solid !important;
    border-color: #6f42c1 !important;
}

.header {
    text-align: center;
    color: white;
    font-size: 60px;
}

.playlistHeader {
    text-align: center;
    color: white;
    font-size: 30px;
}

.playlistForm {
    max-width: 50%;
    margin: auto;
}

@media (max-width: 500px) {
    .header {
        font-size: 40px;
    }
}

@media (max-width: 1400px) {
    .playlistForm {
        max-width: 60%;
    }
}

@media (max-width: 1150px) {
    .playlistForm {
        max-width: 70%;
    }
}

@media (max-width: 850px) {
    .playlistForm {
        max-width: 80%;
    }
}

@media (max-width: 650px) {
    .playlistForm {
        max-width: 90%;
    }
}

.selectedNav {
    color:#6f42c1 !important;
}

.userImage {
    width:50px;
    height: 50px;

}

.artistImage {
    max-height: 320px ;
    max-width: 320px ;
}


.extend {
    width: 100% !important;
}

.cardAdjust {
    height: auto; 
    min-width: 320px; 
    max-width:320px;
}

.cardPlaylist {
    height: 150px; 
    min-width: 320px; 
    max-width:320px;
    border: 3px solid !important;
    border-color: #6f42c1 !important;
    background-color: #121212;
    color: white;
    text-align: center;
}

/* Media queries to enable more items to show at lower resolutions*/

/* Four items (from 3) */
@media (max-width: 1456px) {
    .cardAdjust {
        min-width: 300px; 
        max-width: 300px;
    }

    .artistImage {
        max-height: 300px ;
        max-width: 300px ;
    }
}
/* Four items (from 3)*/
@media (max-width: 1376px) {
    .cardAdjust {
        min-width: 280px; 
        max-width: 280px;
    }

    .artistImage {
        max-height: 280px ;
        max-width: 280px ;
    }
}
/* Four items (from 3) */
@media (max-width: 1296px) {
    .cardAdjust {
        min-width: 260px; 
        max-width: 260px;
    }

    .artistImage {
        max-height: 260px ;
        max-width: 260px ;
    }
}
/* Four items (from 3) */
@media (max-width: 1216px) {
    .cardAdjust {
        min-width: 240px; 
        max-width: 240px;
    }

    .artistImage {
        max-height: 240px ;
        max-width: 240px ;
    }
}
/* Three items (from 2) */
@media (max-width: 856px) {
    .cardAdjust {
        min-width: 200px; 
        max-width: 200px;
    }

    .artistImage {
        max-height: 200px ;
        max-width: 200px ;
    }
}
/* Two items (from 1) */
@media (max-width: 856px) {
    .cardAdjust {
        min-width: 180px; 
        max-width: 180px;
    }

    .artistImage {
        max-height: 180px ;
        max-width: 180px ;
    }
}
/* Two items (from 1) */
@media (max-width: 456px) {
    .cardAdjust {
        min-width: 140px; 
        max-width: 140px;
    }

    .artistImage {
        max-height: 140px ;
        max-width: 140px ;
    }
}

@media (min-width: 330px) {
    .card-deck .card {
        margin-right: 20px !important;
        margin-left: 20px !important;
    }
}


@media (min-width: 330px) {
    .card-deck {
        display: -ms-flexbox;
        display: flex;
        -ms-flex-flow: row wrap;
        flex-flow: row wrap;
        margin-right: -15px;
        margin-left: -15px;
    }
}

.btn-primary {
    background-color: #6f42c1 !important;
    border-color: #6f42c1 !important;
}

.btn-primary:hover, .btn-primary:active {
    background-color: #4c2c87 !important;
    border-color: #4c2c87 !important;
}

